--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '508968740665359');
+  fbq('init', '-----------');
   fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=508968740665359&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=-------------------&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
     
-    <meta name="facebook-domain-verification" content="ndkv1yy6cub8vus98ryqvto63rezyi" />
+    <meta name="facebook-domain-verification" content="codigo aqui" />
     
   </head>
   <body>
