--- a/ps/index.html
+++ b/ps/index.html
@@ -34,7 +34,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://protocolozerbarriga.online/">CONTINUAR</a>
+          <a class="btn" href="https://queimarbanha.site/">CONTINUAR</a>
         </div>
       </div>    
     </div>
